--- a/project-manager.html
+++ b/project-manager.html
@@ -40,20 +40,32 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://jobs.jobvite.com/shiftdigital/job/oi3tbfwJ'>Shift Digital Careers - Program Manager - Lead Management</a></h5> 
+<h5><a href='https://quad.referrals.selectminds.com/jobs/project-manager-client-services-13543'>Project Manager Client Services - Be Quad</a></h5> 
+<p><span class="badge badge-light">San Francisco, California United States</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698668902-project-manager-tech-transfer'>Biogen Project Manager Tech Transfer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698668677-capital-construction-project-manager'>Biogen Capital Construction Project Manager | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Cambridge, MA</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/shiftdigital/job/oi3tbfwJ'>Shift Digital Careers - Program Manager - Lead Management</a></h5> 
+<p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/PurposeFinancial/743999698666220-program-manager'>Purpose Financial Program Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Montreal, QCCanada</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Inmarsat/743999698666100-programme-manager-aviation'>Inmarsat Programme Manager, Aviation | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Inmarsat/743999698666284-programme-manager-aviation'>Inmarsat Programme Manager, Aviation | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='http://onnigroup.applytojob.com/apply/diKePQyV4I/Assistant-Project-Manager'>Assistant Project Manager - Onni Group - Career Page</a></h5> 
@@ -68,7 +80,7 @@
 <p><span class="badge badge-light">Scottsdale, Arizona United States</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.toronto.ca/job/Toronto-SENIOR-PROJECT-MANAGER-ECS-ON-M5V-3C6/537154117/?utm_campaign=889'>SENIOR PROJECT MANAGER ECS</a></h5> 
+<h5><a href='https://jobs.toronto.ca/job/Toronto-SENIOR-PROJECT-MANAGER-ECS-ON-M5V-3C6/537154117/?utm_campaign=889'>SENIOR PROJECT MANAGER ECS</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -132,7 +144,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://cbre.referrals.selectminds.com/CBREVmjbYE'>Program Manager - Data Centers - CBRE Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cbre.referrals.selectminds.com/CBREVmjbYE'>Program Manager - Data Centers - CBRE Careers</a></h5> 
 <p><span class="badge badge-light">Washington, United States  United States</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -160,7 +172,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cruxinformatics/b6a9a7cb-661d-485e-beb0-cb00a08e217f'>Crux Informatics - Technology Project Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/cruxinformatics/b6a9a7cb-661d-485e-beb0-cb00a08e217f'>Crux Informatics - Technology Project Manager</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -246,7 +258,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Fort Pierce, from Cu
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/program-manager-14085'>Program Manager - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/program-manager-14085'>Program Manager - Experian Careers</a></h5> 
 <p><span class="badge badge-light">Melbourne, Victoria, Australia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -276,7 +288,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/curriculumassociates/job/olBrbfwi'>Curriculum Associates Careers - Project Manager / Scrum Master</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/curriculumassociates/job/olBrbfwi'>Curriculum Associates Careers - Project Manager / Scrum Master</a></h5> 
 <p><span class="badge badge-light">North Billerica, Massachusetts</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -288,11 +300,11 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MX/743999698620631-project-manager'>MX Project Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/MX/743999698620631-project-manager'>MX Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Lehi, UT</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/rappi/5fa8bc7c-b739-45e3-9b69-87c51929bf30'>Rappi - Project Manager - Payments and Fraud</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/rappi/5fa8bc7c-b739-45e3-9b69-87c51929bf30'>Rappi - Project Manager - Payments and Fraud</a></h5> 
 <p><span class="badge badge-light">Buenos Aires</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -384,7 +396,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Chicago, Illinois  Chicago</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Expeditors/743999698610511-project-manager-ii-it-operations-management'>Expeditors Project Manager II ? IT Operations Management | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Expeditors/743999698610511-project-manager-ii-it-operations-management'>Expeditors Project Manager II ? IT Operations Management | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -432,21 +444,7 @@ Project Manager/Owners Rep for Developer 55+ Communities in Spring, from Custom 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/vangst/job/jjjussroh356bd3ku7thrcczry'>Marketing Project Manager  | Vangst</a></h5> 
-<p><span class="badge badge-light">Boulder</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://spotlab.recruitee.com/o/clinical-project-manager-madrid'>
-      Clinical Project Manager - SpotLab
-    </a></h5> 
-<p><span class="badge badge-light">Madrid, Spain  Madrid</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/nasuni/job/omDrbfwl'> Nasuni Careers - Principal Technical Program Manager</a></h5> 
-<p><span class="badge badge-light">Boston, Massachusetts</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
