--- a/full-stack.html
+++ b/full-stack.html
@@ -38,6 +38,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/DevIQ/743999698668046-sr-ruby-on-rails-software-developer-full-stack'>DevIQ Sr. Ruby on Rails Software Developer, Full-Stack | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Denver, CO</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://www.fitzii.com/job/44565?s=ft'>Jr Full Stack Engineer | Walden Local Meat Co.</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
 <h5><a href='http://moduscreate.applytojob.com/apply/XpZlMqQY29/Full-Stack-Engineer-Net-Angular-Multiple-Countries'>Full Stack Engineer (.Net, Angular) - Multiple Countries - Modus Create, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
@@ -70,7 +78,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://ast-engineering.join.com/jobs/470406-fullstack-entwickler-m-w-d'>Job @ AST Engineering  (Ottobrunn): Fullstack Entw... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ast-engineering.join.com/jobs/470406-fullstack-entwickler-m-w-d'>Job @ AST Engineering  (Ottobrunn): Fullstack Entw... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -130,15 +138,15 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/discord/jobs/4501928002'>Job Application for Senior Software Engineer - Full-stack (Data Products) at Discord</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/discord/jobs/4501928002'>Job Application for Senior Software Engineer - Full-stack (Data Products) at Discord</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pickwings.join.com/jobs/472542-full-stack-engineer'>Job @ Pickwings (Z?rich): Full-Stack-Engineer | JOIN</a></h5> 
+<h5><a href='https://pickwings.join.com/jobs/472542-full-stack-engineer'>Job @ Pickwings (Z?rich): Full-Stack-Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ofsyafw9&__jvst=Employee+Referral&__jvsd=swYPygwC&__jvsc=Twitter&bid=nZheqMwb'>ServiceNow Careers - Full Stack Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ofsyafw9&__jvst=Employee+Referral&__jvsd=swYPygwC&__jvsc=Twitter&bid=nZheqMwb'>ServiceNow Careers - Full Stack Engineer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -158,7 +166,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/auth0/b6053cd7-71d0-4cc5-88c2-585b99b21f5d'>Auth0 - Full Stack Engineer, Compliance & IAM</a></h5> 
+<h5><a href='https://jobs.lever.co/auth0/b6053cd7-71d0-4cc5-88c2-585b99b21f5d'>Auth0 - Full Stack Engineer, Compliance & IAM</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -216,7 +224,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/brandwatch/job/oZisbfwE'>Brandwatch Careers - Full Stack Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/brandwatch/job/oZisbfwE'>Brandwatch Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light">Brighton, England</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -224,7 +232,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Jscrambler/743999698574379-senior-javascript-fullstack-developer-architect'>Jscrambler Senior JavaScript FullStack Developer / Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Jscrambler/743999698574379-senior-javascript-fullstack-developer-architect'>Jscrambler Senior JavaScript FullStack Developer / Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -390,7 +398,7 @@
 <p><span class="badge badge-light">Brighton, England</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oOEw8fwQ&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nUjUoMwM'>Guidewire Software, Inc. Careers - Software Engineer, Full-Stack ? Dublin, Ireland</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oOEw8fwQ&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nUjUoMwM'>Guidewire Software, Inc. Careers - Software Engineer, Full-Stack ? Dublin, Ireland</a></h5> 
 <p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -406,7 +414,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://touchbistro.applytojob.com/apply/GApJd27W61/Senior-Full-Stack-Developer-Internal-Systems'>Senior Full Stack Developer, Internal Systems - TouchBistro - Career Page</a></h5> 
+<h5><a href='http://touchbistro.applytojob.com/apply/GApJd27W61/Senior-Full-Stack-Developer-Internal-Systems'>Senior Full Stack Developer, Internal Systems - TouchBistro - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -442,18 +450,6 @@
       Fullstack Engineer - Crate.io Inc.
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://crateio.recruitee.com/o/fullstack-engineer-1'>
-      Fullstack Engineer - Crate.io Inc.
-    </a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://crateio.recruitee.com/o/fullstack-engineer-berlin'>
-      Fullstack Engineer - Crate.io Inc.
-    </a></h5> 
-<p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
