--- a/nlp.html
+++ b/nlp.html
@@ -102,11 +102,11 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light"></span></p>
 <p>Oct 19, 2019 ... Apply to Front End Engineer - DeepNLP at SparkCognition in Austin, TX.</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698458836-stage-data-mise-en-uvre-d-une-solution-machine-learning-nlp-h-f-'>ASI STAGE DATA ? MISE EN ?UVRE D?UNE SOLUTION MACHINE LEARNING NLP (H/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698458836-stage-data-mise-en-uvre-d-une-solution-machine-learning-nlp-h-f-'>ASI STAGE DATA ? MISE EN ?UVRE D?UNE SOLUTION MACHINE LEARNING NLP (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698452656-stage-data-mise-en-uvre-d-une-solution-machine-learning-nlp-h-f-'>ASI STAGE DATA ? MISE EN ?UVRE D?UNE SOLUTION MACHINE LEARNING NLP (H/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698452656-stage-data-mise-en-uvre-d-une-solution-machine-learning-nlp-h-f-'>ASI STAGE DATA ? MISE EN ?UVRE D?UNE SOLUTION MACHINE LEARNING NLP (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -234,7 +234,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-09-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/rakutenamericas/jobs/4402844002'>Job Application for Data Scientists (Machine learning and Natural Language Processing) at Rakuten Americas</a></h5> 
+<h5><a href='https://boards.greenhouse.io/rakutenamericas/jobs/4402844002'>Job Application for Data Scientists (Machine learning and Natural Language Processing) at Rakuten Americas</a></h5> 
 <p><span class="badge badge-light">Boston, MANew York, New York San Mateo, CA  North America</span></p>
 <p>Posted on: 2019-09-28</p>
 <hr/>
@@ -255,7 +255,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/flexport/jobs/1837492'>Job Application for Machine Learning Scientist - NLP at Flexport</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/flexport/jobs/1837492'>Job Application for Machine Learning Scientist - NLP at Flexport</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-23</p>
 <hr/>
@@ -267,7 +267,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-09-21</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/magicleapinc/jobs/1879416'>Job Application for Lead Software Engineer - Machine Learning (NLP) at Magic Leap, Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/magicleapinc/jobs/1879416'>Job Application for Lead Software Engineer - Machine Learning (NLP) at Magic Leap, Inc.</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-09-21</p>
 <hr/>
@@ -317,7 +317,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-09-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idana.join.com/jobs/353599-research-software-engineer-ml-und-nlp-in-ehealth-w-m-d'>Research Software Engineer - ML & NLP in eHealth</a></h5> 
+<h5><a href='https://idana.join.com/jobs/353599-research-software-engineer-ml-und-nlp-in-ehealth-w-m-d'>Research Software Engineer - ML & NLP in eHealth</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>vor 21 Stunden ... Tomes GmbH has a job opening for Research Software Engineer - ML & NLP in 
 eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?...</p>
@@ -332,7 +332,7 @@ eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?..
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cardinalhire/136e4a29-f597-40eb-b7eb-18b884392a09'>Stealth Startup - Natural Language Processing Engineer - up to $190,000</a></h5> 
+<h5><a href='https://jobs.lever.co/cardinalhire/136e4a29-f597-40eb-b7eb-18b884392a09'>Stealth Startup - Natural Language Processing Engineer - up to $190,000</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -373,7 +373,7 @@ que?...</p>
 <p>Aug 26, 2019 ... Hands-on working experience in deep NLP Learning algorithms experiences in 
 unstructured text data analysis across industries. Added advantage would be?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/instabase/jobs/4201269002'>Job Application for Software Engineer - Natural Language Processing (NLP) at Instabase</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/instabase/jobs/4201269002'>Job Application for Software Engineer - Natural Language Processing (NLP) at Instabase</a></h5> 
 <p><span class="badge badge-light">San Francisco, CANew York, NYBoston, MA</span></p>
 <p>Posted on: 2019-09-01</p>
 <hr/>
@@ -417,7 +417,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p>5 days ago ... Our engineers and scientists work on technologies such as Deep Learning, 
 Natural Language Processing, Spark, Kafka, AWS, Big data and React.</p>
 <hr/>
-<h5><a href='https://careers-globetech.icims.com/jobs/2540/nlp-engineer-with-italian/job'>Careers | NLP Engineer with Italian in Barcelona ... - GlobeTech</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-globetech.icims.com/jobs/2540/nlp-engineer-with-italian/job'>Careers | NLP Engineer with Italian in Barcelona ... - GlobeTech</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 6, 2019 ... Gran Via de les Corts Catalanes, is now hiring a NLP Engineer with Italian in 
 Barcelona. Review all of the job details and apply today!</p>
@@ -431,7 +431,7 @@ in Barcelona. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Aug 12, 2019 ... Apply online for the job of Senior NLP Engineer at Amplexor.</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/concertohealthai/7626ab95-6c49-4963-be82-70d8e7fd3c12'>Concerto HealthAI - NLP Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/concertohealthai/7626ab95-6c49-4963-be82-70d8e7fd3c12'>Concerto HealthAI - NLP Engineer</a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-08-19</p>
 <hr/>
